codepkg/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Pending_State_Amount_Disbursed__c</fullName>
        <description>This field is subtraction of the &quot;Total State Amount Requested&quot; and &quot;Total State Amount Approved&quot; on the Project.</description>
        <formula>Total_State_Amount_Requested__c -  Total_State_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is subtraction of the &quot;Total State Amount Requested&quot; and &quot;Total State Amount Approved&quot; on the Project.
[ Total State Amount Requested - Total State Amount Approved ]</inlineHelpText>
        <label>Pending State Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_To_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Editable field for Quarterly Report and monitoring purposes that the Subrecipient or OES can update.</inlineHelpText>
        <label>Percent Complete To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The Completion Percent of the Project. Request from Programs if not noted in the Obligating Documents.</description>
        <inlineHelpText>The percentage of work completed for this Project. Request from Program if value is not noted on Obligating Documents.</inlineHelpText>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program_Name_For_Flow__c</fullName>
        <formula>Funding_Opportunity_Name__r.Program_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name For Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name_Formula__c</fullName>
        <description>This field captures the name of Program Name to show on external Portal</description>
        <formula>Program_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Program Name, Derives from Disaster Grant/FO.</description>
        <inlineHelpText>The grant program from which the Project originates. This field is used for reporting.</inlineHelpText>
        <label>Program Name</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Completion_Date__c</fullName>
        <description>Used for CDAA 4a report</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Subrecipient claimed project completion date on the P.4.</inlineHelpText>
        <label>Project Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Completion_Rate__c</fullName>
        <label>Project Completion Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <description>The Federal State Assigned Project Number - FDSR or PA State Project Number.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Project Identifer (PW/DSR/PJ/PL)</inlineHelpText>
        <label>Project (PW/DSR/PJ/PL)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_To_Withdraw__c</fullName>
        <description>This field contains the reason for Project Withdrawal.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reason for the Project Withdrawal.</inlineHelpText>
        <label>Reason To Withdraw</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reverse_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to determine whether Cost Share Percentages would be calculated reverse from State Project Award and Federal Project Award.</description>
        <inlineHelpText>Check this box if the automatic calculation within Salesforce does not match the FEMA values. Some projects may have non-standard cost-share percentage requirements dictated by FEMA.</inlineHelpText>
        <label>Reverse Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_By_Manager__c</fullName>
        <description>Is this Project Reviewed by the Manager?</description>
        <inlineHelpText>Is this Project Reviewed by the Manager?</inlineHelpText>
        <label>Reviewed By Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>The Project Stage.</description>
        <inlineHelpText>The current processing stage of the Project. (e.g. New, Obligated, Compliance Verification, Payment, etc.)</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Obligating</fullName>
                    <label>Obligated</label>
                </value>
                <value>
                    <fullName>Compliance Verification</fullName>
                </value>
                <value>
                    <fullName>Active Payment</fullName>
                </value>
                <value>
                    <fullName>Closeout</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Deobligation</fullName>
                    <isActive>false</isActive>
                    <label>Deobligation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of Project Work Completed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date of Project Work</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StateAdmin__c</fullName>
        <defaultValue>0</defaultValue>
        <description>State Admin share of State Share%.</description>
        <inlineHelpText>State Admin share of the State Cost Share.</inlineHelpText>
        <label>State Admin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StateAmountAvailable__c</fullName>
        <description>State Amount Available for this Project.</description>
        <formula>State_Project_Award__c -   StateAmountDisbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>State Amount Available for this Project.
[ Total Project State Award -  Total State Amount Disbursed ]</inlineHelpText>
        <label>State Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StateAmountDisbursed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total State Amount Disbursed for this Project(Payment is Done).</description>
        <inlineHelpText>Total State Amount Disbursed for the Project. Payment by State Controller&apos;s Office has been confirmed by Cal OES Accounting.</inlineHelpText>
        <label>State Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Cost_Share_Flag__c</fullName>
        <description>If the Sum of State Amount Requested and Admin Amount Requested of all the Projects of this Incident and Sub Recipient is greater than or equal to 2500 then this Flag will be Green or else Red.</description>
        <formula>IF(OR( ISPICKVAL( FundingSource__c , &apos;State Only&apos;) ,ISPICKVAL( FundingSource__c , &apos;Federal and State&apos;)), IMAGE ( IF(  Cumulative_State_Cost_Share_Flag__c = false, &quot;/img/samples/flag_red.gif&quot;, &quot;/img/samples/flag_green.gif&quot;),&quot;Status Flag&quot;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Sum of State Amount Requested and Admin Amount Requested of all the Projects of this Incident and Sub Recipient is greater than or equal to 2500 then this Flag will be Green or else Red.</inlineHelpText>
        <label>State Cost Share Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Project_Award_W_O_Retention__c</fullName>
        <defaultValue>0</defaultValue>
        <description>State Project Award - Total State Retention on Project</description>
        <inlineHelpText>State Project Award - Total State Retention on Project</inlineHelpText>
        <label>State Project Award W/O Retention</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Project_Award__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total State Amount awarded to the Project.</description>
        <inlineHelpText>This is the portion of Total Project Award that the State will award to the Subrecipient.</inlineHelpText>
        <label>State Project Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Retention_To_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>State Retention To Date on Project</description>
        <inlineHelpText>State Retention To Date on Project</inlineHelpText>
        <label>State Retention To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Retention__c</fullName>
        <description>The State retention percent on reimbursable funds of a project in the obligation/repayment phases. Standard is 10%.</description>
        <inlineHelpText>The State retention percent on reimbursable funds of a project in the obligation/repayment phases. Standard is 10%.</inlineHelpText>
        <label>State Retention %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State_Share__c</fullName>
        <defaultValue>0</defaultValue>
        <description>State Share Cost Component only applies to Non Disaster Grants or PA Projects</description>
        <inlineHelpText>Percentage of the Project Amount ($) that was not covered by FEMA that will be paid out by Cal OES as CDAA funds.</inlineHelpText>
        <label>State Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The Project&apos;s Active or Hold Status</description>
        <inlineHelpText>The current status of the Project (e.g. Active or Hold).</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>On Hold - Debt Recovery</fullName>
                </value>
                <value>
                    <fullName>On Hold - Compliance Documents</fullName>
                </value>
                <value>
                    <fullName>Offset Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Recipient_Entity_Type__c</fullName>
        <description>Entity Type of Obligating Sub Recipient.</description>
        <formula>TEXT(Obligating_Sub_Recipient__r.Entity_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The type of Subrecipient entity (e.g. State, City, County, Special District, Tribal, Private Non-Profit).</inlineHelpText>
        <label>Sub Recipient Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Recipient_ID__c</fullName>
        <description>ALS- Depricated
The Sub Recipient FEMA Generated ID (FIPS ID)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ALS- Depricated
The Sub Recipient FEMA Generated ID (FIPS ID)</inlineHelpText>
        <label>Sub Recipient ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplement_Number__c</fullName>
        <description>The PA State Project Number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the FEMA Amendment, Bundle, or Package number. Sequential numbering system related to FEMA Obligations for a given incident.</inlineHelpText>
        <label>Supplement Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmountDisbursed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Amount Disbursed for the Project(Payment is Done).</description>
        <inlineHelpText>Total Amount Disbursed for the Project. Payment by State Controller&apos;s Office has been confirmed by Cal OES Accounting.</inlineHelpText>
        <label>Total Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProjectFederalAward__c</fullName>
        <description>Project Amount Provided by Federal.</description>
        <formula>IF( OR( ISPICKVAL( FundingSource__c , &apos;Federal Only&apos;) ,ISPICKVAL( FundingSource__c , &apos;Federal and State&apos;)) ,( Total_Project_Award__c * FEMA_Share__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Amount Provided by Federal.
[ Total Project Award * FEMA Share %]</inlineHelpText>
        <label>Total Project Federal Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProjectLocalAward__c</fullName>
        <description>Project Amount awarded from Local.</description>
        <formula>Total_Project_Award__c * Local_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the portion of the Project cost that is the Subrecipient entity&apos;s responsibility.</inlineHelpText>
        <label>Total Project Local Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProjectStateAdminShare__c</fullName>
        <description>Project Amount awarded by State Admin.</description>
        <formula>IF( AND( OR(ISPICKVAL( FundingSource__c , &apos;State Only&apos;), ISPICKVAL( FundingSource__c , &apos;Federal and State&apos;)) ,ISPICKVAL(  EligibleforStateAdminShare__c , &apos;Yes&apos;),ISPICKVAL(  PaytoStateAdmin__c , &apos;Yes&apos;)) ,   State_Project_Award__c  * StateAdmin__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an additional amount the State awards the Subrecipient to help with administrative costs. Admin Share = State Project Award x 0.10, or an additional 10% of the State Project Award</inlineHelpText>
        <label>Total Project State Admin Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProjectStateAward__c</fullName>
        <description>Project Amount awarded from State.</description>
        <formula>IF( OR( ISPICKVAL( FundingSource__c , &apos;State Only&apos;) ,ISPICKVAL( FundingSource__c , &apos;Federal and State&apos;)) ,( Total_Project_Award__c *  State_Share__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Amount awarded from State.
[ Total Project Award *  State Share % ]</inlineHelpText>
        <label>Total Project State Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalStateAdminShare__c</fullName>
        <description>Roll Up Summary of all the &quot;State Admin Share&quot; of Payment Request.</description>
        <inlineHelpText>Roll Up Summary of all the &quot;State Admin Share&quot; of Payment Request.</inlineHelpText>
        <label>Total State Admin Share</label>
        <summarizedField>Payment_Request__c.StateAdminShare__c</summarizedField>
        <summaryForeignKey>Payment_Request__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Admin_Amount_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Admin Amount Approved on the Project. This field is the sum of the &quot;Total Admin Share Amount&quot; of all the PRs of this Project, which is in the &quot;Payment Processing / Returned Project Payment / Paid&quot; stage.</description>
        <inlineHelpText>This field is the sum of the &quot;Total Admin Share Amount&quot; of all the PRs of this Project, which is in the &quot;Payment Processing / Returned Project Payment / Paid&quot; stage.</inlineHelpText>
        <label>Total Admin Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Admin_Amount_Requested__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Admin Amount Requested on the Project. This field is the sum of the &quot;Total Admin Share Amount&quot; of all the PRs of this Project except the one which is in the &quot;Withdrawn&quot; stage.</description>
        <inlineHelpText>This field is the sum of the &quot;Total Admin Share Amount&quot; of all the PRs of this Project except the one which is in the &quot;Withdrawn&quot; stage.</inlineHelpText>
        <label>Total Admin Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Approved__c</fullName>
        <description>&quot;Total Amount Approved&quot; is sum of &quot;Total Federal Amount Approved&quot; and &quot;Total State Amount Approved&quot;.</description>
        <formula>Total_Federal_Amount_Approved__c + Total_State_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the value of the Payment Request the FPD Manager has approved for payment. &quot;Total Amount Approved&quot; is sum of &quot;Total Federal Amount Approved&quot; and &quot;Total State Amount Approved&quot;.</inlineHelpText>
        <label>Total Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Requested__c</fullName>
        <description>&quot;Total Amount Requested&quot; is sum of &quot;Total Federal Amount Requested&quot; and &quot;Total State Amount Requested&quot;.</description>
        <formula>Total_Federal_Amount_Requested__c + Total_State_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the value of the Payment Request the FPD Analyst has processed. &quot;Total Amount Requested&quot; is sum of &quot;Total Federal Amount Requested&quot; and &quot;Total State Amount Requested&quot;.</inlineHelpText>
        <label>Total Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Amount_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Federal Amount Approved on the Project. This field is the sum of the &quot;Approved Federal Payment Amount&quot; of all the PRs of this Project, which is in the &quot;Payment Processing / Returned Project Payment / Paid&quot; stage.</description>
        <inlineHelpText>This field is the sum of the &quot;Approved Federal Payment Amount&quot; of all the PRs of this Project, which is in the &quot;Payment Processing / Returned Project Payment / Paid&quot; stage.</inlineHelpText>
        <label>Total Federal Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Amount_Requested__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Federal Amount Requested on the Project. This field is the sum of the &quot;Approved Federal Payment Amount&quot; of all the PRs of this Project except the one which is in the &quot;Withdrawn&quot; stage.</description>
        <inlineHelpText>This field is the sum of the &quot;Approved Federal Payment Amount&quot; of all the PRs of this Project except the one which is in the &quot;Withdrawn&quot; stage.</inlineHelpText>
        <label>Total Federal Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Retention__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Federal Retention.[ Federal Project Amount * Federal Retention% ]</description>
        <inlineHelpText>Total Federal Retention.[ Federal Project Amount * Federal Retention% ]</inlineHelpText>
        <label>Total Federal Retention</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Amount_Available__c</fullName>
        <description>&quot;Total Pending Amount Available&quot; is the Subtraction of &quot;Total Project Award&quot; and &quot;Total Amount Approved&quot;.</description>
        <formula>Total_Project_Award__c - ( Total_Amount_Approved__c + TotalProjectLocalAward__c + Total_Retention_To_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Pending Amount Available&quot; is the Subtraction of &quot;Total Project Award&quot; and &quot;Total Amount Approved&quot;.
[ Total Project Award - (Total Amount Approved + Total Project Local Award + Total Retention To Date) ]</inlineHelpText>
        <label>Total Pending Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Amount_Disbursed__c</fullName>
        <description>This field is sum of the &quot;Pending Federal Amount Disbursed&quot; and &quot;Pending State Amount Disbursed&quot; on the Project.</description>
        <formula>Pending_Federal_Amount_Disbursed__c +  Pending_State_Amount_Disbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the value of the Payment Request Cal OES Accounting has received and will forward to SCO. This field is the sum of &quot;Pending Federal Amount Disbursed&quot; and &quot;Pending State Amount Disbursed&quot; on the Project.</inlineHelpText>
        <label>Total Pending Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Project_Award__c</fullName>
        <description>The Total Amount Awarded by FEMA for the cost of the project.</description>
        <inlineHelpText>This is the total cost of the approved Project. Any cost share percentage calculations start from this value.</inlineHelpText>
        <label>Total Project Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Retention_To_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Retention To Date on Project</description>
        <inlineHelpText>Total Retention To Date on Project</inlineHelpText>
        <label>Total Retention To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_State_Amount_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total State Amount Approved on the Project. This field is the sum of the &quot;Approved State Payment Amount&quot; of all the PRs of this Project, which is in the &quot;Payment Processing / Returned Project Payment / Paid&quot; stage.</description>
        <inlineHelpText>This field is the sum of the &quot;Approved State Payment Amount&quot; of all the PRs of this Project, which is in the &quot;Payment Processing / Returned Project Payment / Paid&quot; stage.</inlineHelpText>
        <label>Total State Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_State_Amount_Available__c</fullName>
        <description>This field is Total State Project Award can be reimbursed excluding &quot;State Retention To Date&quot;.</description>
        <formula>State_Project_Award__c - State_Retention_To_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is Total State Project Award can be reimbursed excluding &quot;State Retention To Date&quot;.
[ State Project Award - State Retention To Date ]</inlineHelpText>
        <label>Total State Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_State_Amount_Requested__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total State Amount Requested on the Project.This field is the sum of the &quot;Approved State Payment Amount&quot; of all the PRs of this Project except the one which is in the &quot;Withdrawn&quot; stage.</description>
        <inlineHelpText>This field is the sum of the &quot;Approved State Payment Amount&quot; of all the PRs of this Project except the one which is in the &quot;Withdrawn&quot; stage.</inlineHelpText>
        <label>Total State Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_State_Retention__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Total State Retention.
[ State Project Amount * State Retention% ]&quot;</description>
        <inlineHelpText>&quot;Total State Retention.
[ State Project Amount * State Retention% ]&quot;</inlineHelpText>
        <label>Total State Retention</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Was_Ever_Large__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows if the Project was ever a Large Project in its lifecycle.</description>
        <inlineHelpText>This field shows if the Project was ever a Large Project in its lifecycle.</inlineHelpText>
        <label>Was Ever Large</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Funding_Opportunity_Name__c</columns>
        <columns>NAME</columns>
        <columns>IsLargeProject__c</columns>
        <columns>Obligating_Sub_Recipient__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Supplement_Number__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>CalOES_Project_Number__c</columns>
        <columns>Percent_Complete_To_Date__c</columns>
        <columns>Federal_Retention__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>GPU_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllPA</fullName>
        <columns>Declaration_Number__c</columns>
        <columns>Project_Number__c</columns>
        <columns>NAME</columns>
        <columns>IsLargeProject__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Obligating_Sub_Recipient__c</columns>
        <columns>Total_Project_Award__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Percent_Complete_To_Date__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
        <sharedTo>
            <group>Public_Assistance_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Project_list</fullName>
        <columns>Declaration_Number__c</columns>
        <columns>Project_Number__c</columns>
        <columns>NAME</columns>
        <columns>IsLargeProject__c</columns>
        <columns>Obligated_Sub_Recipient_Formula__c</columns>
        <columns>Incident_Name_Formula__c</columns>
        <columns>Program_Name_Formula__c</columns>
        <columns>Percent_Complete_To_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <role>HMA_Analyst</role>
            <role>HMA_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closeout_in_Progress</fullName>
        <columns>Funding_Opportunity_Name__c</columns>
        <columns>NAME</columns>
        <columns>IsLargeProject__c</columns>
        <columns>Obligating_Sub_Recipient__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Supplement_Number__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>CalOES_Project_Number__c</columns>
        <columns>Percent_Complete_To_Date__c</columns>
        <columns>Federal_Retention__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Closeout</value>
        </filters>
        <label>Closeout in Progress</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closeout_in_Progress_list_view</fullName>
        <columns>NAME</columns>
        <columns>IsLargeProject__c</columns>
        <columns>Disaster_Grant_FO_Name__c</columns>
        <columns>Obligated_Sub_Recipient_Formula__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Supplement_Number__c</columns>
        <columns>Program_Name_Formula__c</columns>
        <columns>Stage__c</columns>
        <columns>CalOES_Project_Number__c</columns>
        <columns>Percent_Complete_To_Date__c</columns>
        <columns>Federal_Retention__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Closeout</value>
        </filters>
        <label>Closeout in Progress</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Projects_Today</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Created Projects - Today</label>
        <sharedTo>
            <group>GPU_users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>CloseoutTaskAssignment__c</fullName>
        <label>CloseoutTaskAssignment</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>CloseoutTaskMoveProject__c</fullName>
        <label>CloseoutTaskMoveProject</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>RoleSharing__c</fullName>
        <label>RoleSharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>Admin_Share_Validation_for_CDAA</fullName>
        <active>false</active>
        <description>For Non - CDAA Programs State Admin% should always be Zero.</description>
        <errorConditionFormula>AND( NOT( CONTAINS(  Program_Name__r.Master_Label_Program_Name__c  , &apos;CDAA&apos;) ) , StateAdmin__c != 0)</errorConditionFormula>
        <errorDisplayField>StateAdmin__c</errorDisplayField>
        <errorMessage>For Non - CDAA Programs State Admin% should always be Zero.</errorMessage>
    </validationRules>
</CustomObject>